# Zephyr_App-SistemiOperativiDedicati

./: .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  entrypoint.sh
zephyrproject/application/: CMakeLists.txt  prj.conf
zephyrproject/application/include/: app.h
zephyrproject/application/src/: gui.c  led_controller.c  main.c  worker.c
zephyrproject/application/src/utils/: monitor.c
